src/main/java/com/example/demo/entity/error/QuerySortPaginationError.java
package com.example.demo.entity.error;

public enum QuerySortPaginationError {
	PAGE_INDEX_REQUIRED, PAGE_SIZE_REQUIRED;
}
